docs(api): Provide install token on instance creation
